--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar-default">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">MSSD</a>
+          <a class="navbar-brand" href="#">Stock Search</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -30,3 +30,4 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+    <div class="godown-60" id="godown"></div>
