--- a/templates/search.html
+++ b/templates/search.html
@@ -1,11 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-  <h1>Search Song</h1>
+  <h1>Search Stock</h1>
   <form action="" method="POST">
     <div class="form-group">
       <label>Search</label>
-      <input type="text" name="Song" class="form-control" value={{request.form.Song}}>
+      <input type="text" name="Stock" class="form-control" value={{request.form.Stock}}>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
