--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -13,13 +13,12 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/search">Search</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
             {% if session.logged_in %}
-              <li><a href="/playlist">My Playlists</a></li>
-              <li><a href="/search">Search</a></li>
-              <li><a href="/setting">Setting</a></li>
+              <li><a href="/playlist">Followed Stocks</a></li>
               <li><a href="/logout">Logout</a></li>
             {% else %}
               <li><a href="/register">Register</a></li>
