--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,7 @@
     <form action="" method="POST">
       <div class="form-group">
         <label>Search</label>
-        <input type="text" name="Stock" class="form-control" value={{request.form.Stock}}>
+        <input type="text" id ="Stock" name="Stock" class="form-control" value={{request.form.Stock}}>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
@@ -31,21 +31,27 @@
         <body >
         <div class="w3-row ">
                 <div class="card w3-col s12 w3-pale-red">
-                    <h1 id="demo4"></h1>
-                    <div id="chart" class="chartright" ></div>
-                    <p id="demo"></p>
-                    <h2 id="demo1"></h2>
-                    <p id="demo3"></p>
-                    <p id="demo2"></p>                
+                  <h1>{{stockname}}</h1>
+                    <div id="chart7" class="chartright" ></div>
+                    <p></p>
+                    <p >股票代號: {{id}}</p>
+                    <p style="color: red;">今日參考價: {{priceReference}}</p>
+                    <p style="color: red;">漲停價: {{priceHighLimit}}</p>
+                    <p style="color:red;">跌停價: {{priceLowLimit}}</p>
+                    <p>產業別:{{industryZhTw}}</p>              
                 </div>
                 
             </div>
         </body>
+        <script>
+          var stockname = '{{stockname}}'
+        </script>
         <script src="https://code.highcharts.com/stock/highstock.js" ></script>
         <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
+        <script src="https://code.highcharts.com/stock/modules/data.js"></script>
         <script type="text/javascript"
-            src="{{ url_for('static', filename='highchart.js') }}"></script>
+            src="{{ url_for('static', filename='highchartsearch.js') }}"></script>
         
         
         
