--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,26 +1,24 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-  <h1>Playlist <small> Welcome {{session.username}}</small></h1>
-  <hr>
-  {% if mysongs %}
-  <td><a href="/reccomend" class="btn btn-default">Reccomend Me!</a></td>
-  <table class="table table-striped">
-    <tr>
-      <th>Song</th>
-      <th>Artist</th>
-      <th>Album</th>
-      <th></th>
-      <th></th>
-    </tr>
-    {% for song in mysongs %}
-      <tr>
-        <td><a href="/quicksearch/{{song.Song}}">{{song.Song}}</a></td>
-        <td><a href="/quicksearch/{{song.Performer}}">{{song.Performer}}</td>
-        <td><a href="/quicksearch/{{song.spotify_track_album}}">{{song.spotify_track_album}}</td>
-        <td><a href="/removesong/{{song.SongID}}" class="btn btn-default pull-right">Remove</a></td>
-      </tr>
+  <html lang="zh-Hant-TW">
+    <h1>My favorite</h1>
+
+    {% if result %}
+    {% for stock in result %}
+    <table class="table table-striped" action="" method="POST">
+        <tr>
+
+          <td><a href="{{url_for('show', id=stock.symbolId)}}">{{stock.nameZhTw}}</td>
+          <td><a href="/delete/{{stock.symbolId}}" class="btn btn-default pull-right">Delete</a></td>
+
+        </tr>
+    </table>
     {% endfor %}
-  </table>
-  {% endif %}
+
+
+
+
+    {% endif %}
 {% endblock %}
+<!-- <button type="submit" class="btn btn-primary" onclick="/searchresult/{{request.form.Song}}">Submit</button> -->
