--- a/templates/search.html
+++ b/templates/search.html
@@ -14,7 +14,7 @@
     <table class="table table-striped">
         <tr>
           <td><a href="/quicksearch/{{stockname}}">{{stockname}}</td>
-          <td><a href="/addtoPlaylist/{{stockname}}" class="btn btn-default pull-right">Like</a></td>
+          <td><a href="/addtoPlaylist/{{id}}" class="btn btn-default pull-right">Like</a></td>
         </tr>
     </table>
 
