--- a/templates/search.html
+++ b/templates/search.html
@@ -45,6 +45,7 @@
         </body>
         <script>
           var stockname = '{{stockname}}'
+          var id = '{{id}}'
         </script>
         <script src="https://code.highcharts.com/stock/highstock.js" ></script>
         <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
